Release Notes for the event package
-----------------------------------
event-R4-1-3: 2014-06-20 K. Kim
      *Automatic configuration for EVG-200 and EVG-230
         EVG-230 (firmware 0x4xx) has different definition for clock confiugration register.
         the new software recongize hardware version and configure the clock configuration register correctly.

event-R4-1-2:
      * Add ErConfigureWithSlot to add starting VME slot number to 
	look for EVRs.
event-R4-1-1:
      Removed SYS=SYS1 as a default value. This forces us to define SYS,
      and pay attention to its definition. The IOC will break on startup
      with useful error messages rather than behaving oddly when SYS is
      undefined.

event-R4-1-0:
      * New general purpose db files. All site specific configuration is
      handled by defining SYS macros to give reasonable defaults. The new
      files are Bsa.db, EvrPmc.db, Pattern.db, PMC-trig.db, VME-trig.db,
      and VME-TTB-trig.db. Details documented in the corresponding
      substitutions files.
      * enable RX loopback so that signal from EVG may be daisychained to
      slaved EVRs.
      

event-R4-0-1:
      * Add new firmware version 0x11000007 into compatible list for the PMC
event-R4-0-0:
      * remove tag event-R3-5-0 and force tag it to event-R4-0-0

event-R3-5-0:
      * Removing Beam Program Dependency from Event Module
        - do not require SITE_FACILITY information in the RELEASE_SITE file
        - readout the list of event name and EVG delay (intrinsic delay) 
          from waveform PVs in the PNET soft IOC
      * Remove event name from PV (no more TEC macro in the trig.substitution file)
        - Please, read README file for more detailed information
      * Remove ACTV macro for the trig.subsitution file
        - the forward/backward propagation & event invariant delay (fixed delay) are default one
        - Please, read README file for more detailed information


event-R3-4-0: