@@ -1,2 +1,3 @@
 # EVR Data Stream Driver Support
 driver(drvEvr)
+registrar(drvEvrRegister)
